Criando logica de JWT,
