# models/login.go
@@ -1,0 +1,9 @@
+package models
+
+import "gorm.io/gorm"
+
+type Login struct {
+	gorm.Model
+	Email    string `json:"email"`
+	Password string `json:"senha"`
+}
