# models/user.go
@@ -1,0 +1,12 @@
+package models
+
+import (
+	"gorm.io/gorm"
+)
+
+type User struct {
+	gorm.Model `json:"-"`
+	Nome       string `json:"nome"`
+	Email      string `json:"email"`
+	Password   string `json:"senha"`
+}
